Stream task20 sorted [10 of 11]